feat: build the ticket modal to be responsive and show details

--- a/packages/nextjs/styles/globals.css
+++ b/packages/nextjs/styles/globals.css
@@ -236,3 +236,11 @@ td {
 tr:last-child td {
   border-bottom: none;
 }
+
+
+.text-gradient {
+  background: linear-gradient(to right, #C084FC 0%, #F472B6 100%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
