feature/Error-Handling-and-Empty-State-for-Ticket-Loading

--- a/packages/nextjs/styles/globals.css
+++ b/packages/nextjs/styles/globals.css
@@ -237,9 +237,8 @@ tr:last-child td {
   border-bottom: none;
 }
 
-
 .text-gradient {
-  background: linear-gradient(to right, #C084FC 0%, #F472B6 100%);
+  background: linear-gradient(to right, #c084fc 0%, #f472b6 100%);
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
